[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"  # Adjust based on your Python version
absl-py = "2.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
aiosignal = "1.3.2"
altair = "5.5.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
asgiref = "3.8.1"
astroid = "3.3.8"
astunparse = "1.6.3"
attrs = "24.2.0"
audioread = "3.0.1"
av = "13.1.0"
beautifulsoup4 = "4.12.3"
bitarray = "3.0.0"
bitstring = "4.3.0"
blinker = "1.8.2"
bs4 = "0.0.2"
cachetools = "5.5.2"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cloup = "3.0.5"
colorama = "0.4.6"
contourpy = "1.3.0"
cryptography = "44.0.0"
cycler = "0.12.1"
decorator = "5.1.1"
defusedxml = "0.7.1"
dill = "0.3.9"
Django = "5.1.3"
djangorestframework = "3.15.2"
ecdsa = "0.19.0"
esptool = "4.8.1"
et_xmlfile = "2.0.0"
fake-useragent = "2.0.3"
fastapi = "0.115.6"
Flask = "3.0.3"
Flask-Cors = "5.0.0"
flatbuffers = "24.3.25"
fonttools = "4.54.1"
fpdf = "1.7.2"
fpdf2 = "2.8.1"
frozenlist = "1.5.0"
gast = "0.6.0"
gitdb = "4.0.12"
GitPython = "3.1.44"
glcontext = "3.0.0"
google-pasta = "0.2.0"
greenlet = "3.1.1"
grpcio = "1.69.0"
h11 = "0.14.0"
h5py = "3.12.1"
idna = "3.10"
intelhex = "2.3.0"
isort = "5.13.2"
isosurfaces = "0.1.2"
itsdangerous = "2.2.0"
jax = "0.4.35"
jaxlib = "0.4.35"
Jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
keras = "3.7.0"
kiwisolver = "1.4.7"
lazy_loader = "0.4"
libclang = "18.1.1"
librosa = "0.10.2.post1"
llvmlite = "0.43.0"
manim = "0.19.0"
ManimPango = "0.6.0"
mapbox_earcut = "1.0.3"
Markdown = "3.7"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
matplotlib = "3.9.2"
matplotlib-venn = "1.1.1"
mccabe = "0.7.0"
mdurl = "0.1.2"
mediapipe = "0.10.18"
mido = "1.3.3"
ml-dtypes = "0.4.1"
moderngl = "5.12.0"
moderngl-window = "3.1.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
namex = "0.0.8"
narwhals = "1.29.1"
networkx = "3.4.2"
numba = "0.60.0"
numpy = "2.2.3"
opencv-contrib-python = "4.10.0.84"
openpyxl = "3.1.5"
opt_einsum = "3.4.0"
optree = "0.13.1"
packaging = "24.1"
pandas = "2.2.3"
pbr = "6.1.1"
pillow = "11.0.0"
platformdirs = "4.3.6"
plotly = "6.0.0"
pooch = "1.8.2"
propcache = "0.2.1"
protobuf = "4.25.5"
psutil = "7.0.0"
psycopg2-binary = "2.9.10"
pyarrow = "19.0.1"
PyAudio = "0.2.14"
pycairo = "1.27.0"
pycparser = "2.22"
pydantic = "2.10.4"
pydantic_core = "2.27.2"
pydeck = "0.9.1"
pydub = "0.25.1"
pygame = "2.6.1"
pyglet = "2.1.0"
PyGLM = "2.7.3"
Pygments = "2.18.0"
pylint = "3.3.3"
pyparsing = "3.2.0"
pyserial = "3.5"
PySocks = "1.7.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
PyYAML = "6.0.2"
qiskit = "1.4.1"
qiskit-aer = "0.16.4"
redis = "5.2.1"
reedsolo = "1.7.0"
referencing = "0.36.2"
requests = "2.32.3"
rich = "13.9.4"
rpds-py = "0.23.1"
rustworkx = "0.16.0"
scikit-learn = "1.5.2"
scipy = "1.14.1"
screeninfo = "0.8.1"
seaborn = "0.13.2"
sentencepiece = "0.2.0"
setuptools = "75.6.0"
six = "1.16.0"
skia-pathops = "0.8.0.post2"
smmap = "5.0.2"
sniffio = "1.3.1"
socks = "0"
sounddevice = "0.5.1"
soundfile = "0.12.1"
soupsieve = "2.6"
soxr = "0.5.0.post1"
spotipy = "2.25.0"
SQLAlchemy = "2.0.36"
sqlparse = "0.5.1"
srt = "3.5.3"
starlette = "0.41.3"
stevedore = "5.4.1"
streamlit = "1.43.1"
svgelements = "1.9.6"
symengine = "0.13.0"
sympy = "1.13.3"
tenacity = "9.0.0"
termcolor = "2.5.0"
threadpoolctl = "3.5.0"
toml = "0.10.2"
tomlkit = "0.13.2"
tornado = "6.4.2"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
uvicorn = "0.34.0"
watchdog = "6.0.0"
Werkzeug = "3.0.6"
wheel = "0.45.1"
wrapt = "1.17.0"
yarl = "1.18.3"
