[tool.poetry]
name = "latido"
version = "0.1.0"
description = "Musical Heart Rhythm - Spotify Analysis Tool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.43.1"
spotipy = "2.25.0"
pandas = "2.2.3"
numpy = "2.2.3"
matplotlib = "3.9.2"
seaborn = "0.13.2"
plotly = "6.0.0"
scikit-learn = "1.5.2"
pillow = "11.0.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
